--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -9541,7 +9541,7 @@
     },
     "skills.TWM_WEAPON_MASTERY.name": {
         "en": "",
-        "fr": "",
+        "fr": "Maître d'Armes",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9559,7 +9559,7 @@
     },
     "skills.TWM_WEAPON_MASTERY.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Précision de {0}%. Les attaques de base ont 33% de chance d'infliger {0} dégâts additionnel",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9577,7 +9577,7 @@
     },
     "skills.TWM_WEAPON_MASTERY.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Compétence +1.5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9595,7 +9595,7 @@
     },
     "skills.TWM_WEAPON_MASTERY.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "VIT ATQ +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9613,7 +9613,7 @@
     },
     "skills.TWM_WEAPON_MASTERY.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Chance d'activer l'effet +10%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9631,7 +9631,7 @@
     },
     "skills.TWM_SMASH.name": {
         "en": "",
-        "fr": "",
+        "fr": "Smash",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9649,7 +9649,7 @@
     },
     "skills.TWM_SMASH.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente ATQ de base ({0}% x Nv. Personnage)",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9667,7 +9667,7 @@
     },
     "skills.TWM_SMASH.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "PV de Base +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9685,7 +9685,7 @@
     },
     "skills.TWM_SMASH.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Critique +3%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9703,7 +9703,7 @@
     },
     "skills.TWM_SMASH.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "ATQ de Base +20",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9721,7 +9721,7 @@
     },
     "skills.TWM_COMBAT_ENCENTIVE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Combat Intensif",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9739,7 +9739,7 @@
     },
     "skills.TWM_COMBAT_ENCENTIVE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente Précision Critique de 1%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9757,7 +9757,7 @@
     },
     "skills.TWM_COMBAT_ENCENTIVE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "ATQ VIT +1%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9775,7 +9775,7 @@
     },
     "skills.TWM_COMBAT_ENCENTIVE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Compétence Critique +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9793,7 +9793,7 @@
     },
     "skills.TWM_COMBAT_ENCENTIVE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Gagnez l'effet 'Enragé', après chaque Coup Critique, augmente tous les dégâts de 10% pendant 6 sec. (Ne peut s'activer plus d'une fois toutes les 10 sec)",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9811,7 +9811,7 @@
     },
     "skills.TWM_SHOCKING_SMASH.name": {
         "en": "",
-        "fr": "",
+        "fr": "Écorche Tête",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9829,61 +9829,7 @@
     },
     "skills.TWM_SHOCKING_SMASH.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_SHOCKING_SMASH.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_SHOCKING_SMASH.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_SHOCKING_SMASH.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Augmente l'effet de ralentissement de 20%. Augmente la durée de 10 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9901,7 +9847,7 @@
     },
     "skills.TWM_SAVAGE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Sauvage",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9919,7 +9865,7 @@
     },
     "skills.TWM_SAVAGE.effect": {
         "en": "",
-        "fr": "",
+        "fr": Augmente l'Amélioration Critique de {0}%"",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9937,7 +9883,7 @@
     },
     "skills.TWM_SAVAGE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "ATQ de Base +8",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9955,7 +9901,7 @@
     },
     "skills.TWM_SAVAGE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Amélioration Critique +10%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9973,7 +9919,7 @@
     },
     "skills.TWM_SAVAGE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Critique et Précision Compétence Critique +3%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -9991,7 +9937,7 @@
     },
     "skills.TWM_RAVAGE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Dévastation",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10009,7 +9955,7 @@
     },
     "skills.TWM_RAVAGE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente la Vitesse d'Attaque de 0,25% pendant 5 sec quand l'effet Ravage est activé. Peut s'accumuler 4 fois",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10027,7 +9973,7 @@
     },
     "skills.TWM_RAVAGE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Accumulation +1",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10045,7 +9991,7 @@
     },
     "skills.TWM_RAVAGE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "VIT ATQ +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10063,7 +10009,7 @@
     },
     "skills.TWM_RAVAGE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Durée de l'effet Dévastation +5 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10081,7 +10027,7 @@
     },
     "skills.TWM_ELIMINATE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Élimination",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10099,61 +10045,7 @@
     },
     "skills.TWM_ELIMINATE.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_ELIMINATE.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_ELIMINATE.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_ELIMINATE.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Tue instantanément les cibles qui ont moins de 2000 HP",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10171,7 +10063,7 @@
     },
     "skills.TWM_ATTACK_WEAKNESS.name": {
         "en": "",
-        "fr": "",
+        "fr": "Attaque Assourdissante",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10189,7 +10081,7 @@
     },
     "skills.TWM_ATTACK_WEAKNESS.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Les attaques ont {0}% de chance d'étourdir une cible pendant 1,5 sec. Ne peut s'activer qu'une fois toutes les 7 secondes",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10207,7 +10099,7 @@
     },
     "skills.TWM_ATTACK_WEAKNESS.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Chance d'étourdir +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10225,7 +10117,7 @@
     },
     "skills.TWM_ATTACK_WEAKNESS.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Précision et Précision Compétence +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10243,7 +10135,7 @@
     },
     "skills.TWM_ATTACK_WEAKNESS.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Interval d'activation -1 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10261,7 +10153,7 @@
     },
     "skills.TWM_SILENCING_BLADE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Lame Silencieuse",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10279,7 +10171,7 @@
     },
     "skills.TWM_SILENCING_BLADE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Toutes les 10 attaques, le guerrier inflige {0} de Dégâts Sacrés à la cible et la réduit au silence pendant 1 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10297,7 +10189,7 @@
     },
     "skills.TWM_SILENCING_BLADE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "ATQ de Base +15",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10315,7 +10207,7 @@
     },
     "skills.TWM_SILENCING_BLADE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Amélioration Critique +10%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10333,7 +10225,7 @@
     },
     "skills.TWM_SILENCING_BLADE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Vitesse Attaque +50",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10351,7 +10243,7 @@
     },
     "skills.TWM_SERENITY.name": {
         "en": "",
-        "fr": "",
+        "fr": "Sérénité",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10369,61 +10261,7 @@
     },
     "skills.TWM_SERENITY.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_SERENITY.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_SERENITY.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_SERENITY.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "La Sérénité du Maître des Lames augmente sa VIT de 100% et ses Dégâts Critiques de 200%. Dure 8 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10441,7 +10279,7 @@
     },
     "skills.TWM_BLOODLUST.name": {
         "en": "",
-        "fr": "",
+        "fr": "Soif de Sang",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10459,7 +10297,7 @@
     },
     "skills.TWM_BLOODLUST.effect": {
         "en": "",
-        "fr": "",
+        "fr": "{0}% de chance de récupérer 2% de ses PV max lorsqu'une Attaque de Base Critique. Ne peut s'activer qu'une fois toutes les 10 secondes.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10477,7 +10315,7 @@
     },
     "skills.TWM_BLOODLUST.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "PV max +600",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10495,7 +10333,7 @@
     },
     "skills.TWM_BLOODLUST.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Précision +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10513,7 +10351,7 @@
     },
     "skills.TWM_BLOODLUST.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Après une attaque critique, augmente Précision Critique de 10% pendant 5 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10531,7 +10369,7 @@
     },
     "skills.TWM_CHALLENGE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Duel",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10549,61 +10387,7 @@
     },
     "skills.TWM_CHALLENGE.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_CHALLENGE.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_CHALLENGE.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_CHALLENGE.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "La cible de Duel est paralysé pendant 10 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10621,7 +10405,7 @@
     },
     "skills.TWM_DEATH_DANCE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Danse de la Mort",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10639,61 +10423,7 @@
     },
     "skills.TWM_DEATH_DANCE.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_DEATH_DANCE.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_DEATH_DANCE.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_DEATH_DANCE.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Immunise le Maître des Lames contre les effets ralentissements et d'étourdissements. Augmente la VIT de 40. Dure 15 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10711,7 +10441,7 @@
     },
     "skills.TWM_BLOODY_FIGHT.name": {
         "en": "",
-        "fr": "",
+        "fr": "Lutte Sanglante",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10729,7 +10459,7 @@
     },
     "skills.TWM_BLOODY_FIGHT.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Si la cible évite l'attaque, augmente Amélioration Critique de 1%. Dure 20 sec. Peut s'accumuler 20 fois.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10747,7 +10477,7 @@
     },
     "skills.TWM_BLOODY_FIGHT.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "L'éxécution est augmenté à 40000 PV de lacible",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10765,7 +10495,7 @@
     },
     "skills.TWM_BLOODY_FIGHT.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Précision Critique +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10783,7 +10513,7 @@
     },
     "skills.TWM_BLOODY_FIGHT.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Critique des attaques normales augmentées de +350",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10801,7 +10531,7 @@
     },
     "skills.TWM_BLADE_REALM.name": {
         "en": "",
-        "fr": "",
+        "fr": "Domaine des Lames",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10819,61 +10549,7 @@
     },
     "skills.TWM_BLADE_REALM.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_BLADE_REALM.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_BLADE_REALM.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWM_BLADE_REALM.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Augmente la durée de Héritage Sanglant de 5 secondes. Augmente Précision de  200% sous l'effet Héritage Sanguinaire",
         "es": "",
         "ch": "",
         "kr": "",
