--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -10567,7 +10567,7 @@
     },
     "skills.TWP_PROTECTION.name": {
         "en": "",
-        "fr": "",
+        "fr": "Résistance Améliorée",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10585,7 +10585,7 @@
     },
     "skills.TWP_PROTECTION.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Réduis tous les dégâts subis de {0}",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10603,7 +10603,7 @@
     },
     "skills.TWP_PROTECTION.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Récupère 1% des PV max toutes les 10 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10621,7 +10621,7 @@
     },
     "skills.TWP_PROTECTION.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Base ATQ +15",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10639,7 +10639,7 @@
     },
     "skills.TWP_PROTECTION.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Réduction de Dégâts +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10657,7 +10657,7 @@
     },
     "skills.TWP_ENRAGE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Frénésie",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10675,7 +10675,7 @@
     },
     "skills.TWP_ENRAGE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Quand vous êtes touchés, vous avez 10% de chance d'augmenter l'ATQ de 25 pendant 10 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10693,7 +10693,7 @@
     },
     "skills.TWP_ENRAGE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "PV de Base +1%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10711,7 +10711,7 @@
     },
     "skills.TWP_ENRAGE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "'Enragé', récupérez 1% de vos PV max toutes les 5 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10729,7 +10729,7 @@
     },
     "skills.TWP_ENRAGE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Précision et Précision Compétence +5%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10747,7 +10747,7 @@
     },
     "skills.TWP_ENHC_BLOCK.name": {
         "en": "",
-        "fr": "",
+        "fr": "Parade Améliorée",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10765,7 +10765,7 @@
     },
     "skills.TWP_ENHC_BLOCK.effect": {
         "en": "",
-        "fr": "",
+        "fr": "En parant, nullifiez {0} pts de dégâts supplémentaire",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10783,7 +10783,7 @@
     },
     "skills.TWP_ENHC_BLOCK.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Nullifiez 20 de dégâts supplémentaire en parant",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10801,7 +10801,7 @@
     },
     "skills.TWP_ENHC_BLOCK.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Temps de Recharge de Parade -1",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10819,7 +10819,7 @@
     },
     "skills.TWP_ENHC_BLOCK.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Attaque paré +1",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10837,7 +10837,7 @@
     },
     "skills.TWP_SACRIFICE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Sacrifice",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10855,61 +10855,7 @@
     },
     "skills.TWP_SACRIFICE.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_SACRIFICE.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_SACRIFICE.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_SACRIFICE.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Sacrifie 10% de vos PV actuel pour les infliger à la cible, réduisant sa VIT de 50% pendant 5 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10927,7 +10873,7 @@
     },
     "skills.TWP_FORTITUDE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Fortification",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10945,7 +10891,7 @@
     },
     "skills.TWP_FORTITUDE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les PV de Base de {0}%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10963,7 +10909,7 @@
     },
     "skills.TWP_FORTITUDE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts Améliorés +2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10981,7 +10927,7 @@
     },
     "skills.TWP_FORTITUDE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "PV max +400",
         "es": "",
         "ch": "",
         "kr": "",
@@ -10999,7 +10945,7 @@
     },
     "skills.TWP_FORTITUDE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts Physique +10%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11017,7 +10963,7 @@
     },
     "skills.TWP_RIPOSTE_BURST.name": {
         "en": "",
-        "fr": "",
+        "fr": "Riposte",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11035,7 +10981,7 @@
     },
     "skills.TWP_RIPOSTE_BURST.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Quand vous êtes attaqués, vous avez 15% de chance de riposter sur les ennemis dans un rayon de 48 mètres, infligeant {0}% des dégâts d'attaque et {0} dégâts supplémentaire. Ne peut s'activer qu'une fois toutes les 3 secondes.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11053,7 +10999,7 @@
     },
     "skills.TWP_RIPOSTE_BURST.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les chances d'activation de 2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11071,7 +11017,7 @@
     },
     "skills.TWP_RIPOSTE_BURST.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "PV max +500",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11089,7 +11035,7 @@
     },
     "skills.TWP_RIPOSTE_BURST.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts supplémentaires de Riposte +50",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11107,7 +11053,7 @@
     },
     "skills.TWP_REVITALIZE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Revitalisation",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11125,61 +11071,7 @@
     },
     "skills.TWP_REVITALIZE.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_REVITALIZE.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_REVITALIZE.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_REVITALIZE.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Recupère 5% des PV perdu chaque seconde. Dure 20 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11197,7 +11089,7 @@
     },
     "skills.TWP_THOUGH.name": {
         "en": "",
-        "fr": "",
+        "fr": "Constitution",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11215,7 +11107,7 @@
     },
     "skills.TWP_THOUGH.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Quand vous êtes attaqués, vous avez {0}% de chance d'annuler les dégâts de la prochaine attaque. Ne peut s'activer qu'une fois toutes les 3 secondes",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11233,7 +11125,7 @@
     },
     "skills.TWP_THOUGH.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les chances d'activation de 2%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11251,7 +11143,7 @@
     },
     "skills.TWP_THOUGH.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Esquive Compétence Critique +10%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11269,7 +11161,7 @@
     },
     "skills.TWP_THOUGH.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Délai d'activation -1 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11287,7 +11179,7 @@
     },
     "skills.TWP_ENHC_SURGE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Lame Verticale Améliorée",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11305,7 +11197,7 @@
     },
     "skills.TWP_ENHC_SURGE.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les dégâts de Lame Verticale de {0}",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11323,7 +11215,7 @@
     },
     "skills.TWP_ENHC_SURGE.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Augmente les dégâts de Lame Verticale de 200",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11341,7 +11233,7 @@
     },
     "skills.TWP_ENHC_SURGE.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Temps de Recharge de Lame Verticale -1 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11359,7 +11251,7 @@
     },
     "skills.TWP_ENHC_SURGE.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": ".Augmente les dégâts de Lame Verticale de 300. Réduis la VIT de 50 pendant 4 sec.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11377,7 +11269,7 @@
     },
     "skills.TWP_WAR_STOMP.name": {
         "en": "",
-        "fr": "",
+        "fr": "Piétinement",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11395,61 +11287,7 @@
     },
     "skills.TWP_WAR_STOMP.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_WAR_STOMP.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_WAR_STOMP.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_WAR_STOMP.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Inflige 1400 de dégâts bonus à toutes les cibles dans un rayon de 5 mètres autour de vous. Étourdis les cibles touchés pendant 2 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11467,7 +11305,7 @@
     },
     "skills.TWP_VETERAN_SCAR.name": {
         "en": "",
-        "fr": "",
+        "fr": "Cicatrices de Vétéran",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11485,7 +11323,7 @@
     },
     "skills.TWP_VETERAN_SCAR.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Tous les 4% de PV perdu, vous gagnez {0}% de Dégâts Améliorés (Maximum de 80% des PV perdu)",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11503,7 +11341,7 @@
     },
     "skills.TWP_VETERAN_SCAR.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts Améliorés +1%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11521,7 +11359,7 @@
     },
     "skills.TWP_VETERAN_SCAR.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "PV max +800",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11539,7 +11377,7 @@
     },
     "skills.TWP_VETERAN_SCAR.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "Dégâts subis -10",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11557,7 +11395,7 @@
     },
     "skills.TWP_CHARGE.name": {
         "en": "",
-        "fr": "",
+        "fr": "Charge",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11575,61 +11413,7 @@
     },
     "skills.TWP_CHARGE.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_CHARGE.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_CHARGE.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_CHARGE.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Charge à une destinaton, infligeant 165% de dégâts aux cibles proches et les étourdis pendant 1 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11647,7 +11431,7 @@
     },
     "skills.TWP_SHIELD_WALL.name": {
         "en": "",
-        "fr": "",
+        "fr": "Bouclier Immuable",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11665,61 +11449,7 @@
     },
     "skills.TWP_SHIELD_WALL.effect": {
         "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_SHIELD_WALL.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_SHIELD_WALL.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_SHIELD_WALL.effect.level20": {
-        "en": "",
-        "fr": "",
+        "fr": "Le Guerrier passe en manoeuvre défensive. Augmente RD DGTS de 40%. Gagne 4% de RD DGTS tous les 4% PV perdus, s'accumule jusqu'à 120% de RD DGTS. Dure 10 sec",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11737,7 +11467,7 @@
     },
     "skills.TWP_INFLEXIBLE_WILL.name": {
         "en": "",
-        "fr": "",
+        "fr": "Volonté Inexorable",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11755,7 +11485,7 @@
     },
     "skills.TWP_INFLEXIBLE_WILL.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Quand vous êtes touchés par un Coup Critique, augmente Réduction de Dégâts de {0}. Peut s'accumuler 20 fois.",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11773,7 +11503,7 @@
     },
     "skills.TWP_INFLEXIBLE_WILL.effect.level10": {
         "en": "",
-        "fr": "",
+        "fr": "Réduction Critique +20%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11791,7 +11521,7 @@
     },
     "skills.TWP_INFLEXIBLE_WILL.effect.level15": {
         "en": "",
-        "fr": "",
+        "fr": "Réduction Compétence Critique  +20%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11809,7 +11539,7 @@
     },
     "skills.TWP_INFLEXIBLE_WILL.effect.level20": {
         "en": "",
-        "fr": "",
+        "fr": "PV +3%",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11827,7 +11557,7 @@
     },
     "skills.TWP_BLADE_REALM.name": {
         "en": "",
-        "fr": "",
+        "fr": "Réflexion",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11845,7 +11575,7 @@
     },
     "skills.TWP_BLADE_REALM.effect": {
         "en": "",
-        "fr": "",
+        "fr": "Under Blood Boundary Status, Warrior can reflect 50% of the Damage",
         "es": "",
         "ch": "",
         "kr": "",
@@ -11859,60 +11589,5 @@
         "it": "",
         "pl": "",
         "th": "",
-        "id": ""
-    },
-    "skills.TWP_BLADE_REALM.effect.level10": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_BLADE_REALM.effect.level15": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
-    },
-    "skills.TWP_BLADE_REALM.effect.level20": {
-        "en": "",
-        "fr": "",
-        "es": "",
-        "ch": "",
-        "kr": "",
-        "ru": "",
-        "tr": "",
-        "de": "",
-        "jp": "",
-        "pt": "",
-        "vi": "",
-        "ar": "",
-        "it": "",
-        "pl": "",
-        "th": "",
-        "id": ""
     }
 }
